23_power_rec/grade.txt
Grading at Fri Mar 22 07:44:31 UTC 2019
Attempting to compile power.c
power.c: In function ‘power’:
power.c:5:18: error: expected identifier before ‘(’ token
   if (x == 0) && (y == 0){
                  ^
power.c:14:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
